Finished Section 7: Lecture 55

--- a/js-bootcamp/todo-app/index.html
+++ b/js-bootcamp/todo-app/index.html
@@ -6,11 +6,8 @@
     </head>
     <body>
         <h1>Things To Do</h1>
-        <p>Finish Bootcamp Course</p>
-        <p>Finish Docker Swarm cleanup</p>
-        <p>Book the New Years trip</p>
-        <p>Buy winter jacket</p>
-        <p>Arrange the meetup</p>
+        <input id="new-todo-text" type="text" placeholder="Enter something to do">
+        <button id="add-todo">Add New Todo...</button>
         <script src="todo-app.js"></script>
     </body>
 </html>
