--- a/js-bootcamp/notes-app/index.html
+++ b/js-bootcamp/notes-app/index.html
@@ -7,8 +7,12 @@
     <body>
         <h1>Notes App</h1>
         <h2>Take notes and never forget</h2>
-        <p>This application was created by Anthony Petrides</p>
-        <p>Some note text</p>
+        <input id="search-text" type="text" placeholder="Filter todos">
+        <p class="note">This application was created by Anthony Petrides</p>
+        <p class="note">Some note text</p>
+        <button id="create-note">Create Note</button>
+        <button id="remove-all">Remove All Notes</button>
+
         <script src="notes-app.js"></script>
     </body>
 </html>
