update since last lecture

--- a/js-bootcamp/todo-app/index.html
+++ b/js-bootcamp/todo-app/index.html
@@ -8,6 +8,9 @@
         <h1>Things To Do</h1>
         <input id="new-todo-text" type="text" placeholder="Enter something to do">
         <button id="add-todo">Add New Todo...</button>
+        <p></p>
+        <input id="search-text" type="text" placeholder="Filter todos...">
+        <div id="todos"></div>
         <script src="todo-app.js"></script>
     </body>
 </html>
