--- a/js-bootcamp/notes-app/index.html
+++ b/js-bootcamp/notes-app/index.html
@@ -8,8 +8,7 @@
         <h1>Notes App</h1>
         <h2>Take notes and never forget</h2>
         <input id="search-text" type="text" placeholder="Filter todos">
-        <p class="note">This application was created by Anthony Petrides</p>
-        <p class="note">Some note text</p>
+        <div id="notes"></div>
         <button id="create-note">Create Note</button>
         <button id="remove-all">Remove All Notes</button>
 
