Finished Section 7: Lecture 58

--- a/js-bootcamp/todo-app/index.html
+++ b/js-bootcamp/todo-app/index.html
@@ -6,11 +6,15 @@
     </head>
     <body>
         <h1>Things To Do</h1>
-        <input id="new-todo-text" type="text" placeholder="Enter something to do">
-        <button id="add-todo">Add New Todo...</button>
+        <!-- <input id="new-todo-text" type="text" placeholder="Enter something to do">
+        <button id="add-todo">Add New Todo...</button> -->
         <p></p>
         <input id="search-text" type="text" placeholder="Filter todos...">
         <div id="todos"></div>
+        <form id="new-todo-form">
+            <input type="text" placeholder="New Todo" name="newTodo">
+            <button>Add Todo</button>
+        </form>
         <script src="todo-app.js"></script>
     </body>
 </html>
