--- a/js-bootcamp/notes-app/index.html
+++ b/js-bootcamp/notes-app/index.html
@@ -10,8 +10,10 @@
         <input id="search-text" type="text" placeholder="Filter todos">
         <div id="notes"></div>
         <button id="create-note">Create Note</button>
-        <button id="remove-all">Remove All Notes</button>
-
+        <form id="name-form">
+            <input type="text" placeholder="Firstname" name="firstName">
+            <button>Sumbit</button>
+        </form>
         <script src="notes-app.js"></script>
     </body>
 </html>
