Finished Section 7: Javascript in the Browser

--- a/js-bootcamp/todo-app/index.html
+++ b/js-bootcamp/todo-app/index.html
@@ -10,6 +10,9 @@
         <button id="add-todo">Add New Todo...</button> -->
         <p></p>
         <input id="search-text" type="text" placeholder="Filter todos...">
+        <label>
+            <input id="hide-completed" type="checkbox"> Hide completed
+        </label>
         <div id="todos"></div>
         <form id="new-todo-form">
             <input type="text" placeholder="New Todo" name="newTodo">
