--- a/js-bootcamp/notes-app/index.html
+++ b/js-bootcamp/notes-app/index.html
@@ -7,13 +7,14 @@
     <body>
         <h1>Notes App</h1>
         <h2>Take notes and never forget</h2>
-        <input id="search-text" type="text" placeholder="Filter todos">
+        <input id="search-text" type="text" placeholder="Filter notes">
+        <select id="filter-by">
+            <option value="byEdited">Sort by last edited</option>
+            <option value="byCreated">Sort by recently created</option>
+            <option value="alphabetical">Sort alphabetically</option>
+        </select>
         <div id="notes"></div>
         <button id="create-note">Create Note</button>
-        <form id="name-form">
-            <input type="text" placeholder="Firstname" name="firstName">
-            <button>Sumbit</button>
-        </form>
         <script src="notes-app.js"></script>
     </body>
 </html>
