Finished Section 8: Lecture 65

--- a/js-bootcamp/todo-app/index.html
+++ b/js-bootcamp/todo-app/index.html
@@ -18,6 +18,7 @@
             <input type="text" placeholder="New Todo" name="newTodo">
             <button>Add Todo</button>
         </form>
+        <script src="todos-functions.js"></script>
         <script src="todo-app.js"></script>
     </body>
 </html>
