--- a/js-bootcamp/notes-app/edit.html
+++ b/js-bootcamp/notes-app/edit.html
@@ -4,7 +4,11 @@
     <head>
     </head>
     <body>
-        This is the editing body
-        <a href="/index.html">My text for the link</a>
+        <a href="/index.html">Home</a>
+        <input id = "note-title" placeholder="Note title">
+        <textarea id="note-body" placeholder="Enter note text"></textarea>
+        <button id="remove-note">Remove Note</button>
+        <script src="notes-functions.js"></script>
+        <script src="notes-edit.js"></script>
     </body>
 </html>
