--- a/js-bootcamp/todo-app/index.html
+++ b/js-bootcamp/todo-app/index.html
@@ -19,7 +19,7 @@
             <button>Add Todo</button>
         </form>
         <script src="uuidv4.js"></script>
-        <script src="todos-functions.js"></script>
+        <script src="todo-functions.js"></script>
         <script src="todo-app.js"></script>
     </body>
 </html>
