--- a/js-bootcamp/hangman/index.html
+++ b/js-bootcamp/hangman/index.html
@@ -3,6 +3,10 @@
 <html>
     <head></head>
     <body>
+        <h1>Hangman</h1>
+        <p id="puzzle"></p>
+        <p id="guesses"></p>
+        <script src="hangman.js"></script>
         <script src="app.js"></script>
     </body>
 </html>
