--- a/js-bootcamp/hangman/index.html
+++ b/js-bootcamp/hangman/index.html
@@ -2,13 +2,16 @@
 
 <html>
     <head>
+        <title>Hangman</title>
         <link href="/styles/styles.css" rel="stylesheet">
+        <link href="/images/favicon.png" rel="icon">
     </head>
     <body>
-        <h1>Hangman</h1>
-        <p id="puzzle"></p>
-        <p id="guesses" class="warning"></p>
-        <button id="reset"class="warning">Reset</button>
+        <div>
+            <div id="puzzle" class="puzzle"></div>
+            <p id="guesses"></p>
+            <button id="reset"class="button">Reset</button>
+        </div>
         <script src="scripts/requests.js"></script>
         <script src="scripts/hangman.js"></script>
         <script src="scripts/app.js"></script>
