--- a/js-bootcamp/notes-app/edit.html
+++ b/js-bootcamp/notes-app/edit.html
@@ -2,15 +2,31 @@
 
 <html>
     <head>
+        <title>Notes App</title>
+        <link rel="icon" href="/images/favicon.png">
+        <link rel="stylesheet" href="/styles/styles.css">
     </head>
     <body>
-        <a href="/index.html">Home</a>
-        <input id = "note-title" placeholder="Note title">
-        <span id="last-edited"></span>
-        <textarea id="note-body" placeholder="Enter note text"></textarea>
-        <button id="remove-note">Remove Note</button>
+        <div class="header">
+            <div class="container">
+                <h1 class="header__title">Notes App</h1>
+                <h2 class="header__subtitle">Take notes and never forget</h2>
+            </div>
+        </div>
+        <div class="actions">
+            <div class="actions__container actions__container--spaced">
+                <a href="/index.html">Home</a>
+                <span id="last-edited"></span>
+            </div>
+        </div>
+        <div class="container">
+            <input id = "note-title" class="title-input" placeholder="Note title">
+            <textarea id="note-body" class="body-input" placeholder="Enter note text"></textarea>
+            <button id="remove-note" class="button button--secondary">Remove Note</button>
+        </div>
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
-        <script src="notes-functions.js"></script>
-        <script src="notes-edit.js"></script>
+        <script src="/scripts/notes-functions.js"></script>
+        <script src="/scripts/notes-edit.js"></script>
     </body>
 </html>
