--- a/js-bootcamp/todo-app/index.html
+++ b/js-bootcamp/todo-app/index.html
@@ -2,24 +2,37 @@
 
 <html>
     <head>
-
+        <title>To-do App</title>
+        <link rel="icon" href="/images/favicon.png">
+        <link rel="stylesheet" href="/styles/styles.css">
     </head>
     <body>
-        <h1>Things To Do</h1>
-        <!-- <input id="new-todo-text" type="text" placeholder="Enter something to do">
-        <button id="add-todo">Add New Todo...</button> -->
-        <p></p>
-        <input id="search-text" type="text" placeholder="Filter todos...">
-        <label>
-            <input id="hide-completed" type="checkbox"> Hide completed
-        </label>
-        <div id="todos"></div>
-        <form id="new-todo-form">
-            <input type="text" placeholder="New Todo" name="newTodo">
-            <button>Add Todo</button>
-        </form>
-        <script src="uuidv4.js"></script>
-        <script src="todo-functions.js"></script>
-        <script src="todo-app.js"></script>
+        <div class="header">
+            <div class="container">
+                <h1 class="header__title">To-do App</h1>
+                <h2 class="header__subtitle">What do you need to do?</h2>
+            </div>
+        </div>
+
+        <div class="actions">
+            <div class="actions__container">
+                <input id="search-text" class="input" type="text" placeholder="Filter todos...">
+                <label class="checkbox">
+                    <input id="hide-completed" type="checkbox"> Hide completed
+                </label>
+            </div>
+        </div>
+
+        <div class="container">
+            <div id="todos"></div>
+            <form id="new-todo">
+                <input type="text" class="input" placeholder="New Todo" name="newTodo">
+                <button class="button">Add Todo</button>
+            </form>
+        </div>
+
+        <script src="/scripts/uuidv4.js"></script>
+        <script src="/scripts/todo-functions.js"></script>
+        <script src="/scripts/todo-app.js"></script>
     </body>
 </html>
