--- a/js-bootcamp/todo-app/public/index.html
+++ b/js-bootcamp/todo-app/public/index.html
@@ -26,7 +26,7 @@
         <div class="container">
             <div id="todos"></div>
             <form id="new-todo">
-                <input type="text" class="input" placeholder="New Todo" name="newTodo">
+                <input type="text" class="input" placeholder="New Todo" name="text">
                 <button class="button">Add Todo</button>
             </form>
         </div>
